Initial feature extraction changes.